[package]
name    = "dao-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"] }
eyre = "0.6.5"
serde_json = "1.0.73"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }

[features]
