[package]
name    = "dao-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
cast = { git = "https://github.com/gakonst/foundry" }
color-eyre = "0.5.11"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"] }
eyre = "0.6.5"
hex = "0.4.3"
serde_json = "1.0.73"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }

[features]
